IPP/projects/IPP-test.php-master/int-only/vyzi_tests/should-pass/from-parse-only/no_arg_instructions4.src
<?xml version="1.0" encoding="UTF-8"?>
<program language="IPPcode19">
	<instruction order="1" opcode="CREATEFRAME"/>
	<instruction order="2" opcode="BREAK"/>
</program>
