IPP/projects/IPP-test.php-master/int-only/vyzi_tests/should-fail/pushframe3.src
<?xml version="1.0" encoding="UTF-8"?>
<program language="IPPcode19">
	<instruction order="1" opcode="CREATEFRAME">
	</instruction>
	<instruction order="2" opcode="PUSHFRAME">
	</instruction>
	<instruction order="3" opcode="DEFVAR">
		<arg1 type="var">TF@antuh</arg1>
	</instruction>
</program>
